# heat_diffusion_tp

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Equation.cpp  Equation.h  GaussSeidel.cpp  GaussSeidel.h  IMesh.h  IScheme.h  Jacobi.cpp  Jacobi.h  Makefile  Problem.cpp  Problem.h  Timer.cpp  Timer.h  UniformMesh.cpp  UniformMesh.h  Variable.cpp  Variable.h  Variable_u_kp1_GaussSeidel.data  Variable_u_kp1_Jacobi.data  cmake_install.cmake  main.cpp  plot_data.gp  readme.md  simulation
